--- a/src/main/ui/src/components/NavBar.css
+++ b/src/main/ui/src/components/NavBar.css
@@ -7,22 +7,39 @@
     text-decoration: none;
   }
 
+  li {
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 10px;
+   }
+
   .team {
     background-image: url('../imgs/icons/team.png');
+    width: 40px;
+    height: 40px;
   }
 
   .stats {
     background-image: url('../imgs/icons/stats.png');
+    width: 40px;
+    height: 40px;
   }
 
   .rater {
     background-image: url('../imgs/icons/rater.png');
+    width: 40px;
+    height: 40px;
   }
 
   .matches {
     background-image: url('../imgs/icons/matches.png');
+    width: 40px;
+    height: 40px;
   }
 
   .profile {
     background-image: url('../imgs/icons/profile.png');
+    width: 40px;
+    height: 40px;
   }
