Started Profile page styling

--- a/src/main/ui/src/App.css
+++ b/src/main/ui/src/App.css
@@ -5,3 +5,14 @@
   bottom: 0;
   width: 100%;
 }
+
+button {
+  background-color:  rgb(40, 240, 145);
+  border-radius: 8px;
+  width: 100px;
+  height: 35px;
+  font-size: large;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
