Removed button highlights

--- a/src/main/ui/src/components/NavBar.css
+++ b/src/main/ui/src/components/NavBar.css
@@ -5,6 +5,10 @@
     bottom: 0;
     width: 100%;
   }
+
+.nonHighlight{
+  -webkit-tap-highlight-color: transparent;
+}
 ul {
   padding-inline-start: 0px;
   margin-block-start: 10px;
