--- a/src/main/ui/src/components/Header.css
+++ b/src/main/ui/src/components/Header.css
@@ -6,4 +6,12 @@
     margin-right: auto;
 }
 
+.menu {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 1rem;
+    top: 3%;
+}
+
 
