--- a/src/main/ui/src/components/RaterPlayer.css
+++ b/src/main/ui/src/components/RaterPlayer.css
@@ -1,7 +1,7 @@
 .star {
     width: 25px;
     height: 25px;
-    margin: 2px 4px 10px 4px;
+    margin: 2px 5px 10px 5px;
 
 }
 
@@ -9,3 +9,8 @@ h4 {
     margin: 4px 6px;
 }
 
+.starRating{
+    margin-left: auto;
+    margin-right: auto;
+    margin: 10px;
+}
