--- a/src/main/ui/src/App.css
+++ b/src/main/ui/src/App.css
@@ -16,3 +16,10 @@ button {
   margin-left: auto;
   margin-right: auto;
 }
+
+h2, h3 {
+  margin: 10px 6px;
+  color: rgb(1, 160, 232);
+  /* color: rgb(40, 240, 145); */
+  text-align: center;
+}
