--- a/src/main/ui/src/containers/Profile.css
+++ b/src/main/ui/src/containers/Profile.css
@@ -8,8 +8,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .games{
@@ -21,8 +21,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .goals{
@@ -34,8 +34,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .assists{
@@ -47,8 +47,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .POTM{
@@ -60,8 +60,19 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
+}
+
+.position{
+    grid-area: position;
+    background-color: white;
+    margin: 2px;
+    padding: 2px;
+    border-radius: 12px;
+    width:55px;
+    height:55px;
+    text-align: center;
 }
 
 .firstName{
@@ -73,8 +84,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .secondName{
@@ -83,11 +94,11 @@
     margin: 2px;
     padding: 2px;
     border-radius: 12px;
-    width:55px;
-    height:55px;
+    /* width:55px;
+    height:55px; */
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .rating{
@@ -99,8 +110,8 @@
     width:55px;
     height:55px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .pic{
@@ -111,22 +122,46 @@
     border-radius: 4px;
 }
 
+.profileCard > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .profileCard{
     display: grid;
-    background-color: red;
-    background-image: url('../imgs/messi/messi.jpeg');
+    /* background-color: red; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* background-image: url('../imgs/messi/messi.jpeg'); */
     background-repeat: no-repeat;
     background-size: contain;
     border-style: solid;
-    border-color: black;
-    border-width: 20px;
+    /* border-color: black; */
+    border-width: 14px;
+    box-sizing: border-box;
     padding: 6px;
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 90px 90px 90px 90px 90px;
+    /* grid-template-rows: 90px 90px 90px 90px 90px; */
     grid-template-areas:
-        "badge pic pic pic games"
-        "pic pic pic pic goals"
-        "pic pic pic pic assists"
-        "pic pic pic pic PTOM"
-        "firstName secondName secondName secondName rating";
+        "badge . . . games"
+        ". . . . goals"
+        ". . . . assists"
+        ". . . . POTM"
+        "position firstName secondName secondName rating";
+}
+
+.profileCardWrapper {
+    position: relative;
+    width: 100vw;
+}
+
+.profileCardWrapper > img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
