--- a/src/main/ui/src/containers/Profile.css
+++ b/src/main/ui/src/containers/Profile.css
@@ -94,8 +94,8 @@
     margin: 2px;
     padding: 2px;
     border-radius: 12px;
-    /* width:55px;
-    height:55px; */
+    /* width:55px; */
+    height:55px;
     text-align: center;
     /* margin-left: auto;
     margin-right: auto; */
