--- a/src/main/ui/src/components/Menu.css
+++ b/src/main/ui/src/components/Menu.css
@@ -1,18 +1,11 @@
-label {
+
+.admin {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin: 15px;
-    text-align:left;
-    color: rgb(1, 160, 232);
+    margin: 10px;
+    width: 50px;
+    height: 50px;
 }
 
-input {
-    display:inline-block;
-    margin-left: 15px;       
-    position: relative;
-    text-align:left;
-    justify-content: center;
-    width: 250px;
-    height: 30px;
-}
+.nonHighlight{
+    -webkit-tap-highlight-color: transparent;
+  }
