--- a/src/main/ui/src/App.css
+++ b/src/main/ui/src/App.css
@@ -23,3 +23,16 @@ h2, h3 {
   /* color: rgb(40, 240, 145); */
   text-align: center;
 }
+
+
+
+.container{
+  position:absolute;
+  top:0;
+  right:0;
+  margin:10px
+ }
+
+ img {
+   height: 50px;
+ }
